# ten_ai_base

./: .coderabbit.yaml  .gitignore  CLAUDE.md  README.md  Taskfile.yml  manifest.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  claude-code-review.yml
api/: asr-interface.json  llm-interface.json  tts-interface.json  v2v-interface.json
integration_tests/test_async_llm_base/: addon.py  extension.py  manifest.json
integration_tests/test_async_llm_base/tests/: test_basic.py
integration_tests/test_async_llm_tool_base/: addon.py  extension.py  manifest.json
integration_tests/test_async_llm_tool_base/tests/: test_basic.py
integration_tests/test_async_tts2_base/: addon.py  extension.py  manifest.json
integration_tests/test_async_tts2_base/tests/: test_basic_tts.py  test_cmd_return.py  test_flush.py
integration_tests/test_async_tts_base/: addon.py  extension.py  manifest.json
integration_tests/test_config_python/: addon.py  extension.py  manifest.json
integration_tests/test_config_python_async/: addon.py  extension.py  manifest.json
interface/ten_ai_base/: __init__.py  asr-interface.json  asr.py  audio_buffer_manager.py  chat_memory.py  config.py  const.py  dumper.py  helper.py  llm.py  llm2.py  llm_tool.py  message.py  mllm.py  reconnect_manager.py  struct.py  timeline.py  transcription.py  tts.py  tts2.py  tts2_http.py  types.py
tests/: test_asr_connection_events.py  test_basic.py  test_chat_memory.py  test_time_helper.py  test_timeline.py  test_timeline_dropped_audio.py  test_tts2_http.py  test_tts_struct.py
(+8 files in other folders)
