[project]
name = "ten_ai_base"
version = "0.1.0"
description = "TEN Framework base AI module"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "pydantic>=2",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["interface/ten_ai_base"]
